--- a/WWR/Styles/Site-Plan-Rafting.css
+++ b/WWR/Styles/Site-Plan-Rafting.css
@@ -8,7 +8,7 @@ Fonts are separated by a & */
   --primary-color: #1F7A8C   ;
   --secondary-color: #022B3A ;
   --accent1-color: #BFDBF7;
-  --accent2-color: #e1e5f2;
+  --accent2-color: #EE6352;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "QuickSand";
@@ -16,7 +16,7 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #022B3A;  /* headlines on a white background */ 
-  --headline-color-on-color: #E1E5F2; /* headlines on a colored background */ 
+  --headline-color-on-color: #EE6352; /* headlines on a colored background */ 
   --paragraph-color-on-white: #022B3A; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #BFDBF7  ;
