--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,33 +1,38 @@
-body {
-    text-align: center;
-  }
-  nav {
-    background-color: steelblue;
-    padding: 10px;
-  }
-  #active {
-    background-color: white;
-    color: steelblue;
+head{ 
+  text-align: center;
+  background-color: steelblue;
 }
-  a {
-    color: white;
-    margin: 40px;
-  }
-  h1 {
-    color: steelblue;
-  }
-  img {
-    width: 800px;
-    border: 4px solid steelblue;
-  }
-  p {
-    padding: 10px;
-  }
-  .main-para {
-    font-size: 1.5em;
-    line-height: 1.5em;
+nav,footer{
+  background-color: steelblue;
+  color: white;
+  padding: 10px;
 }
-  footer {
-    background-color: steelblue;
-    color: white;
-  }
+a:hover {
+  background-color: white;
+  color: steelblue;
+}
+footer p {
+  font-size: 20px;
+  margin: 20px auto;
+}
+
+main{
+}
+h1{
+  background-color: steelblue;
+  color:white;
+}
+body{
+  background-color: whitesmoke;
+  text-align: center;
+}
+img {
+  width: 40%;
+  display: block;
+  margin: 0 auto;
+}
+main p{
+width: 80%;
+    display: block;
+    margin: 50px auto;
+}
