--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,27 +1,91 @@
-
-header{
-    text-align: center;
-}
-nav a
-{
-    text-align: center;
-}
- h1 #hero-msg 
- {
-    text-align: center;
- }
-h4 #hero-msg {
-    text-align: center;
- }
- .button-box
- {
-    text-align: center;
- }
- main section
-{
-text-align: center;
-}
 #content{
-    max-width: 1600px;
-    margin: 0 auto;
+max-width: 1600px;
+margin: 0 auto;
+}
+body{
+   background-color: #3bd6c6;
+   color: white;
+}
+.icon {
+    width: 80px;
+}
+header{
+    background-color: #3bd6c6;
+    color: white;
+}
+
+nav, a{
+    text-align: center;
+    color: white;
+    font-size: 1.25em;
+}
+nav a:hover{
+    background-color: black;
+    color: white;
+     text-decoration: none;
+}
+#hero-img{
+    width: 100%;
+}
+#hero-msg h1, #hero-msg h4{
+    text-align: center;
+    color: white;
+}
+.button-box{
+    text-align: center;
+    color: white;
+}
+main section{
+    text-align: center;
+    color: white;
+}
+#background{
+    height: 725px;
+    background-color: #1e78ca;
+}
+
+.book{
+    background-color: #3bd6c6;
+    color: white;
+    text-decoration: underline;
+}
+.join{
+    background-color: #3bd6c6;
+    color: white;
+    text-decoration: none;
+}
+.book:hover{
+    background-color: white;
+    color: black;
+}
+.join:hover{
+    background-color: white;
+    color: black;
+}
+.msg{
+    background-color: #3bd6c6;
+}
+.msg h2{
+    
+    color: white;
+}
+.msg p{
+    color: white;
+
+}
+footer{
+    background-color: #1e78ca;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
+footer p{
+    font-size: 1.5em;
+    text-decoration: underline;
+}
+footer a:hover{
+color: black;
+background-color: white;
+text-decoration: underline;
 }
