--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ body{
    background-color: #3bd6c6;
    color: white;
 }
-.icon {
+.icon, .logo {
     width: 80px;
 }
 header{
@@ -15,9 +15,11 @@ header{
 }
 
 nav, a{
-    text-align: center;
-    color: white;
+    text-align: left;
+    color: white; 
     font-size: 1.25em;
+    text-decoration: none;
+    
 }
 nav a:hover{
     background-color: black;
