--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,39 @@
+@import url(https://www.cssfontstack.com);
 #content{
 max-width: 1600px;
 margin: 0 auto;
+font-size: 22px;
 }
 body{
    background-color: #3bd6c6;
    color: white;
+   margin: 0;
+   padding: 0;
 }
-.icon, .logo {
+h2{
+    margin: 0;
+}
+.icon{
+    width:80px;
+    padding-top: 10px;
+}
+.logo {
     width: 80px;
+}
+#logo_link{
+    padding-top: 5px;
 }
 header{
     background-color: #3bd6c6;
     color: white;
 }
 
-nav, a{
+nav a{
     text-align: left;
     color: white; 
     font-size: 1.25em;
-    text-decoration: none;
-    
+    text-decoration: none; 
+    padding: 35px;
 }
 nav a:hover{
     background-color: black;
@@ -29,9 +43,27 @@ nav a:hover{
 #hero-img{
     width: 100%;
 }
-#hero-msg h1, #hero-msg h4{
+.home-title{
+    font-family: 'Arial Black', Arial, Tahoma ;
+    font-size: 2em;
     text-align: center;
     color: white;
+    margin-top: 10px;
+}
+#hero-msg h4{
+    font-family: Arial, Tahoma, 'Arial Black' ;
+    text-align: center;
+    color: white;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+.card-img{
+    border: 10px;
+    border-color: black;
+}
+main section img {
+    box-sizing: border-box;
 }
 .button-box{
     text-align: center;
@@ -45,48 +77,50 @@ main section{
     height: 725px;
     background-color: #1e78ca;
 }
-
+.book, .join{
+    background-color: #3bd6c6;
+    color: white;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
 .book{
-    background-color: #3bd6c6;
-    color: white;
     text-decoration: underline;
+
 }
-.join{
-    background-color: #3bd6c6;
-    color: white;
-    text-decoration: none;
-}
-.book:hover{
-    background-color: white;
-    color: black;
-}
-.join:hover{
+.book:hover,.join:hover{
     background-color: white;
     color: black;
 }
 .msg{
     background-color: #3bd6c6;
+    padding: 35px;
 }
 .msg h2{
     
     color: white;
+    font-family: Tahoma, 'Arial Black', Arial;
 }
 .msg p{
     color: white;
-
+    padding-bottom: 15px;
+    font-family: Tahoma, 'Arial Black', Arial;
 }
 footer{
     background-color: #1e78ca;
+    padding: 25px 50px;
+    margin-top: 200px;
+    text-align: left;
+
 }
 footer a{
     color: white;
     text-decoration: none;
 }
-footer p{
-    font-size: 1.5em;
-    text-decoration: underline;
+footer .social img{
+    padding-top: 15px;
 }
-footer a:hover{
+    footer a:hover{
 color: black;
 background-color: white;
 text-decoration: underline;
