--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ header{
 
 nav a{
     text-align: left;
-    font-style:verdana, Tahoma;
+    font-family:'Arial Black', Arial, Tahoma;
     color: white; 
     font-size: 1.25em;
     text-decoration: none; 
@@ -45,14 +45,14 @@ nav a:hover{
     width: 100%;
 }
 .home-title{
-    font-family: 'Arial Black', Arial, Tahoma ;
+    font-family: Arial, Tahoma ;
     font-size: 2em;
     text-align: center;
     color: white;
     margin-top: 10px;
 }
 #hero-msg h4{
-    font-family: Arial, Tahoma, 'Arial Black' ;
+    font-family: Arial, Tahoma;
     text-align: center;
     color: white;
 }
@@ -112,7 +112,7 @@ footer{
     padding: 25px 50px;
     margin-top: 200px;
     text-align: left;
-    font-style: Verdana, Tahoma;
+    font-family: 'Arial Black', Arial, Tahoma;
     border-top: 5px rgb(102, 110, 117) solid ;
 }
 footer a{
@@ -120,7 +120,7 @@ footer a{
     text-decoration: none;
 }
 footer .social img{
-    padding-top: 15px;
+    padding-top: 15px rgb(102, 110, 117);
 }
     footer a:hover{
 color: black;
