--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,7 +120,7 @@ footer a{
     text-decoration: none;
 }
 footer .social img{
-    padding-top: 15px rgb(102, 110, 117);
+    padding-top: 15px;
 }
     footer a:hover{
 color: black;
