--- a/styles/contactus.css
+++ b/styles/contactus.css
@@ -9,7 +9,7 @@ body{
     grid-template-rows: 100px 800px 100px;
 }
 header{
-    background-color: #3bd6c6;
+    background-color: #1e78ca;
     grid-row: 1/2;
     grid-column: 1/4;
     display: grid;
